nilges/themes/greensteel/static/css/style.css
/*@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');*/
/*@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');*/
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=VT323&display=swap');

:root {
    --titleFont: 'VT323';
    --fontFamily: 'Open Sans', sans-serif;
    --fontFamilyCode: 'IBM Plex Mono', monospace;
    --fontWeight: 'lighter';
    --colorSecondary:#cccccc;
    --colorAccent:#e5b567;
    --colorAccentHover:#ebe5ab;
    --colorLink:#75BFFF;
    --colorLinkVisited:#75BFFF;
    --colorLinkHover:#A3CEF5;
    --colorPostLink:#94C530;
    --colorCode:#bbff5c;
    --colorBackgroundSecondary:#111111;
    --colorBackground:#020202;
}

/* Components */

body {
    margin: 0;
    font-family: var(--fontFamily);
    font-weight: var(--fontWeight);
    background-color: var(--colorBackground);
}

img {
    display: block;
    width: 50% class;
    margin-left: auto;
    margin-right: auto;
}

hr {
    color: #808080;
}

a:link {
    color: var(--colorAccent);
    background-color: transparent;
    text-decoration: underline;
}

a:visited {
    color: var(--colorAccent);
    background-color: transparent;
    text-decoration: none;
}

a:hover {
    color: var(--colorAccentHover);
    background-color: transparent;
    text-decoration: underline;
}

a:active {
    color: var(--colorAccent);
    background-color: transparent;
    text-decoration: underline;
}

:not(pre) > code {
    color: var(--colorCode);
    font-family: var(--fontFamilyCode);
    font-size: 15px;
    background-color: var(--colorBackgroundSecondary);
}

pre > code {
    color: var(--colorCode);
    font-family: var(--fontFamilyCode);
    font-size: 15px;

    overflow: auto;
    display: block;
    background-color: var(--colorBackgroundSecondary);
}

.pageTitle {
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    font-size: 36px;
    font-family: var(--titleFont);
    background-color: var(--colorBackground);

    /* For sticky header */
    position: fixed;
    width: 100%;
}

.postLineItem {
    margin: 12px 0px 12px 0px;
}

.postTitle h2 {
    color: white;
    display: inline;
    margin-bottom: 0px;
    text-decoration: none;
    font-weight: light;
}

.postTitle h2:hover {
    color: var(--colorLinkHover);
}

.postDate {
    color: var(--colorSecondary);
}

.mainContent {
    color: #FFFFFF;
    background-color: var(--colorBackgroundSecondary);
    padding: 10px;
    /*padding: 0px 10px 0px;*/
}

.mainContent a {
    color: var(--colorLink);
}

.mainContent a:hover {
    color: var(--colorLinkHover); 
}

.sidebarLink {
    display: flex;

    font-size: 24px;
    font-family: var(--titleFont);
    color: var(--colorAccent);

    padding: 4px;
    margin: 4px;
}

.sidebarSeparator {
    justify-content: center;
}

.sidebarBottomItems {
    display: flex;
    flex-grow: 1;
    flex-direction: column;
    justify-content: flex-end;
}


/* Sad attempt at responsive design */

@media screen and (min-width: 1000px){
    .pageTitle {
        margin: 0;
        font-size: 36px;
    }

    .sidebar {
        display: flex;
        background-color: var(--colorBackground);
        border-right: 1px solid var(--colorAccent);
        flex-direction: column;
        width: 180px;

        /* Sticky sidebar */
        position: fixed;
        height: 100%;

        margin-top: 44px; /* Height of the top bar */
    }

    .mainContent {
        margin-left: 181px; /* Same as the width of the sidebar */
        margin-top: 44px; /* Height of the top bar */
    }
}

@media screen and (max-width: 1000px){
    .pageTitle {
        text-align: center;
        font-size: 36px;
        width: 100%;
    }

    .sidebar {
        display: none;
    }
}

